error/src/main/java/com/example/error/ErrorHandler.kt
package com.example.error

interface ErrorHandler {
    fun getNetworkException(throwable: Throwable): Exception
}